Fix chart view on Windows
Remove scrollbar for charts - it creates unnecessary scrollbars
(horizontal ad vertical) on Windows.

--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -11,6 +11,10 @@
   z-index: 9999999999;
   width: 62em;
   min-height: 35em;
+
+  .viewport {
+    overflow-y: hidden;
+  }
 }
 
 .chart-wrapper.ready:hover {
